planes and plotting

--- a/Python/modules/snapshot_case_study_3/Ensembles case study/main.tex
+++ b/Python/modules/snapshot_case_study_3/Ensembles case study/main.tex
@@ -164,6 +164,27 @@
 	\end{subfigure}	
 \end{figure}
 
+\begin{figure}
+	\centering
+	\includegraphics[width=1\linewidth]{./figs/planes.png}  
+	\caption{}
+	\label{}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=1\linewidth]{./figs/line_plots.png}  
+	\caption{}
+	\label{}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=1\linewidth]{./figs/origin_planes.png}  
+	\caption{}
+	\label{}
+\end{figure}
+
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%	
