--- a/Python/modules/snapshot_case_study_3/Ensembles case study/main.tex
+++ b/Python/modules/snapshot_case_study_3/Ensembles case study/main.tex
@@ -45,7 +45,16 @@
 		\includegraphics[width=1\linewidth]{./figs/snap_rep_err.png}  
 		\caption{d}
 	\end{subfigure}
-	\caption{caption.}
+	\begin{subfigure}{.45\textwidth}
+		\centering
+		\includegraphics[width=1\linewidth]{./figs/ens_rep_fun.png}  
+		\caption{e}
+	\end{subfigure}
+	\begin{subfigure}{.45\textwidth}
+		\centering
+		\includegraphics[width=1\linewidth]{./figs/ens_rep_err.png}  
+		\caption{f}
+	\end{subfigure}
 \end{figure}
 \blindtext
 \begin{figure}[htbp]
@@ -86,6 +95,15 @@
 	\end{subfigure}
 	\caption{Comparisons between single models, snapshot ensembles, no-cycle ensembles (standard lr), single-cycle ensembles (cosine annealing with no warm restarts), and true ensembles.}
 	\label{fig:fig}
+\end{figure}
+
+\blindtext
+
+\begin{figure}
+	\centering
+	\includegraphics[width=0.6\linewidth]{./figs/kmn_plot.png}  
+	\caption{Put your sub-caption here}
+	\label{fig:sub-first}
 \end{figure}
 
 \blindtext
